--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,65 +1,31 @@
-<!-- HTML5 DOCTYPE -->
 <!DOCTYPE html>
-<html lang="<%= I18n.locale.to_s %>">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <title><%= yield(:title).empty? ? t('site.name') : yield(:title)%></title>
-    <meta name="keywords" content="<%= t('profile.tags.default') %><%= yield(:keywords) %>" >
-    <meta name="description" content= "<%= yield(:description).empty? ? t('frontpage.main_title') : yield(:description) %>" >
-    <meta name="generator" content="SocialStream" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "WeLink" %></title>
+    <%= csrf_meta_tags %>
+		
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
 
-    <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "application" %>
-
-    <%= yield :headers %>
-
-    <%= favicon_link_tag "icons/favicon.ico" %>
-
-    <% if protect_against_forgery? %>
-      <%= csrf_meta_tag %>
-    <% end %>
-
-    <script type="text/javascript">
-      I18n.defaultLocale = "<%= I18n.default_locale %>";
-      I18n.locale = "<%= I18n.locale %>";
-    </script>
-
-    <script type="text/javascript">
-      $(document).ready(function() {
-        <%= yield :javascript %>
-      })
-    </script>
+    <%= render "layouts/assets" %>
+    <%= render "layouts/links" %>
   </head>
   <body>
-    <div id="wrapper">
-      <header><%= render :partial => "layouts/header" %></header>
-      <div id="wrapper_body">
-        <nav id="toolbar">
-          <div id="toolbarContent" class="block">
-            <div class="space_center">
-            </div>
-            <%= yield :toolbar %>
-          </div>
-        </nav>
-        <div id= "center_body">
-          <div id="map_location">
-            <%= yield :location %>
-          </div>
-          <div id="flash">
-            <%= render :partial => "layouts/flash", :locals => {:flash => flash} %>
-          </div>
-          <section id="content">
-            <%= yield %>
-          </section>
-        </div>
-        <aside id="sidebar">
-          <div id="sidebarContent">
-            <%= yield :sidebar %>
-          </div>
-        </aside>
-      </div>
-      <footer><%= render :partial => "layouts/footer" %></footer>
-    </div>
+    <%= render "layouts/header" %>
+    <div class="container">
+      <div class="content">
+	<%= notice_message %>
+	<div class='row'>
+	  <%= yield %>
+	</div>
+      </div><!--/content-->
+      <div class='clearfix'><div>
+	  <br />
+	  <%= render "layouts/footer" %>
+	</div> <!-- /container -->
   </body>
 </html>
