--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,8 @@
-<% sidebar %>
-
-<%= location(link_to(t('home')+": "+ truncate_name(sanitize current_subject.name)))%>
-                      
-<% toolbar %>
-
-<br class="clearfloat" />
-<div class="space_center">
+<div class='span-left'>			
 </div>
-
-<% if current_subject.respond_to?(:recent_groups) %>
-<div id="my_groups">
-  <%= render :partial => "groups" %>
+<div class='span-right'>
+	<%= render "users/profile" %>		
+	<%= raw title_block "你可能感兴趣的人", users_path %>
+	<br />
+	<%= raw title_block "你可能感兴趣的小组", users_path %>
 </div>
-<% end %>
-
-<%= render :partial => "activities/index",
-           :locals => { :activities => current_subject.wall(:home).page(params[:page]),
-                        :owner => current_subject } %>
