--- a/app/views/layouts/_account.html.erb
+++ b/app/views/layouts/_account.html.erb
@@ -8,7 +8,7 @@
 	</li>
 	<li class='divider'></li>
 	<li>
-		<%= link_to '退出', destroy_user_session_path, :method => delete %>
+		<%= link_to '退出', destroy_user_session_path, :method => :delete %>
 	</li>
 	<%- else %>
 	<li>
