--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,7 @@
-<div class='span-left'>			
+<div class='span-left'>		
+	<%= render :partial => "activities/index", :locals => { :activities => current_subject.wall(:home).page(params[:page]),
+	                        :owner => current_subject } %>
+		
 </div>
 <div class='span-right'>
 	<%= render "users/profile" %>		
