--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <div class='span-left'>			
-	<%= render "users/menu" %>
+	<%= render "home/status" %>
+</div>
+<div id="activities">
 </div>
 <div class='span-right'>
 	<%= render "users/profile" %>		
