--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
 	<%= f.input :name, :required => true, :label => '显示名', :hint => "只允许5-15个字母、数字或者下划线 " %>
 	<%= f.input :password, :required => true, :label => '密码', :hint => "最少6位 " %>
 	<%= f.input :password_confirmation, :required => true, :label => '重复密码' %>
-	<%= f.input :domain_id, :label => "领域", :collection => Domain.all.collect{|d|[d.name, d.id]}, :include_blank => false, :required => true, :hint => "选择您所关注的领域，将会结识更多同行业的朋友  "  %>
+	<%= f.input :field_id, :label => "领域", :collection => Field.all.collect{|d|[d.name, d.id]}, :include_blank => false, :required => true, :hint => "选择您所关注的领域，将会结识更多同行业的朋友  "  %>
 	<div class="form-actions">
 		<%= f.button :submit, "注册", :class => "btn-primary" %>
 	</div>
