--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -4,6 +4,5 @@
   <%= tab.note '笔记', notes_path %>
   <%= tab.group '群组', groups_path %>
   <%= tab.event '课程', events_path %>	
-  <%= tab.question '问答', questions_path %>
-  <%= tab.user '知识库', users_path %>
+  <%= tab.question '机构', organizations_path %>
 <% end %>
