--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,17 +1,12 @@
-<%= form_for(@my_post) do |f| %>
-  <% if @my_post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@my_post.errors.count, "error") %> prohibited this my_post from being saved:</h2>
-
-      <ul>
-      <% @my_post.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= simple_form_for @note, :html => {:id => "new_post_form", :class => 'form-horizontal'} do |f| -%>	
+	<%= render 'shared/error_messages', :object => f.object %>
+	<%= f.hidden_field(:kind, :value => 'article') %>	
+	<%= f.input :title, :label => '标题' %>
+	<%= f.input :note_category_id, :label => "分类", :collection => nested_set_options(NoteCategory, current_user.root_category){|i| "#{'-' * i.level} #{i.name}"} %>
+	<%= f.input :body, :as => :kindeditor, :label => '内容', :input_html => { :width => 620, :height => 450 } %>
+	<%= render "shared/tag_select", :f => f %>
+	<div class="form-actions">
+		<%= f.submit "发布", :class=>'btn btn-primary' %>&nbsp;
+		<button class="btn" type="reset">保存为草稿</button>
+	</div>
 <% end %>
