--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,11 +1,10 @@
 <div class='clearfix post'>
 	<div class='header'>
-		<h4><i class="icon-large <%= post.avatar %>"></i>  <%= link_to(post.title, user_post_path(post.user, post)) %> </h4>
+		<h4><i class="icon-large <%= note.avatar %>"></i>  <%= link_to(note.title, note_path(note)) %> </h4>
 		<div class="summary">
-			<%= truncate(post.body, :length => 240, :omission => '......') %>
+			<%= truncate(note.body, :length => 240, :omission => '......') %>
 		</div>
 	</div>
 	<div class="footer clearfix">
-		<%= render "my/posts/post_footer", :post => post %>
 	</div>
 </div>
