--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -3,6 +3,11 @@
   <%= render :partial => 'note', :collection => @notes %>
 </div>
 <div class='span-right'>
+  <div class="btn-group">
+		<%= link_to raw("<i class='icon-edit'></i> 新建笔记"), new_note_path, :class => "btn" %>
+		<%= link_to raw("<i class='icon-reorder'></i> 分类管理"), note_categories_path, :class => "btn" %>
+  </div>
+
   <%= raw title_block "我的分类", note_categories_path, "管理" %>
   <%= render "categories" %>
 </div>
