--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -3,25 +3,18 @@
 <%= javascript_include_tag 'live-comment-preview' %>
 <% end -%>
 <div class='span-left'>
-	<%= render "users/menu" %>
 	<div id='post' class='post'>
-		<h4><i class="icon-large <%= @post.avatar %>"></i>  <%= link_to(@post.title, my_post_path(@post)) %></h4>
+		<h4><i class="icon-large <%= @note.avatar %>"></i>  <%= link_to(@note.title, note_path(@note)) %></h4>
 		<div class="footer clearfix">
-			<%= render 'post_footer', :post => @post %>
 		</div>
 		<div class='body'>
-			<%= raw @post.body %>
+			<%= raw @note.body %>
 		</div>
 	</div>
 	<div class='clearfix'></div>
 	<br />
-	<%= render 'comments' %>
 </div>
 <div class='span-right'>
-	<%- if current_user and current_user.login == @user.login %>
-		<%= render "categories" %>
-	<% else %>
-		<%= render "users/profile" %>		
-	<% end %>
+	<%= render "categories" %>
 </div>
 
