--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,7 @@
 <%= tabs_tag(:namespace => :site_menus, :open_tabs => {:id => "user_menus", :class => "nav" }, :builder => MenuTabBuilder) do |tab| %>
   <%= tab.home '首页', root_path %>
-  <%= tab.contact '好友', contacts_path %>
-  <%= tab.note '笔记', notes_path %>
+  <%= tab.doc '资料', documents_path %>
+  <%= tab.plan '计划', plans_path %>
   <%= tab.group '群组', groups_path %>
   <%= tab.event '课程', events_path %>	
-  <%= tab.question '机构', organizations_path %>
 <% end %>
