--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,10 @@
 <div class='span-left'>			
-	<%= render "home/status" %>
+	<%= render "home/post_form" %>
+	<div id="posts" class='clearfix'>
+		<%= render :partial => 'posts/post', :collection => @posts %>
+	</div>
 </div>
-<div id="activities">
-</div>
+
 <div class='span-right'>
 	<%= render "users/profile" %>		
 	<%= raw title_block "你可能感兴趣的人", users_path %>
