--- a/app/views/groups/_nav.html.erb
+++ b/app/views/groups/_nav.html.erb
@@ -1,15 +1,9 @@
-<ul class="nav nav-tabs">
-	<li class="active">
-		<%= link_to "最新", "" %>
-	</li>
-	<li>
-		<%= link_to "本周热点", "" %>
-	</li>
-	<li>
-		<%= link_to "本月热点", "" %>
-	</li>
-	<li>
-
-		<%= link_to "年度热点", "" %>
-	</li>
-</ul>
+<div class="tabbable tabs-left">
+	<%= tabs_tag(:namespace => :group_nav, :open_tabs => {:id => "user_menus", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
+	  <%= tab.index '首页', root_path %>
+		<%- current_user.groups.each do |group| %>
+	  	<%= tab.try "group_#{group.id}", group.name, group_path(@group) %>
+		<% end %>
+	  <%= tab.new '创建群组', new_group_path %>	
+	<% end %>
+</div>
