--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,9 +1,1 @@
-<% content_for :title do%>
-  <%= t('group.new.action')%>
-<%end%>
-
-<% toolbar :home, :option => 'groups' %>
-
-<% sidebar :group_index %>
-
-<%= render :partial => 'new' %>
+<%= render 'form' %>
