--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,15 @@
 <div id="footer" class='row'>
 	<span class="fleft gray-link" id="icp">
-		&copy; 2012－2013 51team.net, all rights reserved &nbsp;&nbsp;
+		&copy; 2012－2013 welink.im, all rights reserved &nbsp;&nbsp;
 		<a href="http://www.miibeian.gov.cn/"></a>
 	</span>
 
 	<span class="fright">
-		· <%= link_to "关于海学网", page_path("about") %>
-		· <%= link_to "开发手记", page_path("note") %>
-		· <%= link_to "广告服务", page_path("ads") %>
-		· <%= link_to "帮助中心", page_path("help") %>
-		· <%= link_to "问题反馈", page_path("feedback") %>
-		· <%= link_to "联系我们", page_path("contact") %>
+		· <%= link_to t('About'), page_path("about") %>
+		· <%= link_to t('FAQ'), page_path("faq") %>
+		· <%= link_to t('Help'), page_path("help") %>
+		· <%= link_to t('Feedback'), page_path("feedback") %>
+		· <%= link_to t('Contact'), page_path("contact") %>
 	</span>
 
 </div>
