--- a/app/assets/stylesheets/override.css
+++ b/app/assets/stylesheets/override.css
@@ -12,18 +12,11 @@ body {
     background-size: auto auto;
 }
 
-a.btn-primary{
-    color: #fff;
-}
-
-a {
-    color: #225599;
-    outline: medium none;
-    text-decoration: none;
-}
-a:active {
-    background: none repeat scroll 0 50% transparent;
-    color: #999999;
+.nav-tabs > li > a, .nav-pills > li > a {
+    line-height: 14px;
+    margin-right: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
