--- a/app/views/layouts/_account.html.erb
+++ b/app/views/layouts/_account.html.erb
@@ -1,21 +1,21 @@
 <ul id="account" class="nav pull-right">
 	<%-if user_signed_in? %>
 	<li>
-		<%=link_to "我的主页", root_path %>
+		<%=link_to t('My Page'), root_path %>
 	</li>
 	<li>
-		<%= link_to '个人设置', edit_user_registration_path %>
+		<%= link_to t('Settings'), edit_user_registration_path %>
 	</li>
 	<li class='divider'></li>
 	<li>
-		<%= link_to '退出', destroy_user_session_path, :method => :delete %>
+		<%= link_to t('Logout'), destroy_user_session_path, :method => :delete %>
 	</li>
 	<%- else %>
 	<li>
-		<%= link_to '注册', new_user_registration_path %>
+		<%= link_to t('Signup'), new_user_registration_path %>
 	</li>
 	<li>
-		<%= link_to '登录', new_user_session_path %>
+		<%= link_to t('Login'), new_user_session_path %>
 	</li>
 	<% end %>
 </ul>
