update db schema

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,16 +3,16 @@
 	<h3>注册海学网</h3><br />
 
 	<%= render 'shared/error_messages', :object => f.object %>
-	<%= f.input :email, :required => true, :autofocus => true, :label => '邮箱' %>
-	<%= f.input :name, :required => true, :label => '显示名', :hint => "只允许5-15个字母、数字或者下划线 " %>
-	<%= f.input :password, :required => true, :label => '密码', :hint => "最少6位 " %>
-	<%= f.input :password_confirmation, :required => true, :label => '重复密码' %>
-	<%= f.input :field_id, :label => "领域", :collection => Field.all.collect{|d|[d.name, d.id]}, :include_blank => false, :required => true, :hint => "选择您所关注的领域，将会结识更多同行业的朋友  "  %>
+	<%= f.input :email, :required => true, :autofocus => true %>
+	<%= f.input :name, :required => true %>
+	<%= f.input :password, :required => true %>
+	<%= f.input :password_confirmation, :required => true %>
+	<%# f.input :field_id, :label => "领域", :collection => Field.all.collect{|d|[d.name, d.id]}, :include_blank => false, :required => true, :hint => "选择您所关注的领域，将会结识更多同行业的朋友  "  %>
 	<div class="form-actions">
-		<%= f.button :submit, "注册", :class => "btn-primary" %>
+		<%= f.submit :class => "btn btn-primary" %>
 	</div>
 	<% end %>
 </div>
 <div class='span-right'>
-	<%= link_to '已有帐号， 立即去登录', new_user_session_path, :class=>'btn' %>
+	<%= link_to t('already have one account? login'), new_user_session_path, :class=>'btn' %>
 </div>
