--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,4 +1,3 @@
-<%= render "posts/form" %>
 <div id="posts" class='clearfix'>
-	<%= render :partial => 'posts/post', :collection => @posts %>
+	<%= render @activities %>
 </div>
