--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="en-US">
-<head>
-  <meta charset="utf-8">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "海学网" %></title>
+    <%= csrf_meta_tags %>
+		
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
 
-  <title><%= enki_config[:title] %> - Admin Login</title>
-
-  <%= stylesheet_link_tag 'login' %>
-</head>
-<body>
-  <div id="page">
-    <div id="content">
-      <%= yield %>
-    </div>
-    <div id="nav">
-      <ul>
-        <li><%= link_to("View Site", '/', :title => 'View Site') %></li>
-      </ul>
-    </div>
-  </div>
-</body>
+    <%= render "layouts/assets" %>
+    <%= render "layouts/links" %>
+  </head>
+  <body>
+    <%= render "layouts/header" %>
+    <div class="container">
+      <div class="content">
+	<%= notice_message %>
+	<div class='row'>
+	  <%= yield %>
+	</div>
+      </div><!--/content-->
+      <div class='clearfix'><div>
+	  <br />
+	  <%= render "layouts/footer" %>
+	</div> <!-- /container -->
+  </body>
 </html>
+
