--- a/app/views/groups/_profile.html.erb
+++ b/app/views/groups/_profile.html.erb
@@ -1,7 +1,7 @@
 <table>
 	<tr>
 		<td>
-			<%= image_tag current_user.avatar_url(:m) || "http://placehold.it/75x75" %>
+			<%= image_tag current_user.avatar_url(:m) || "http://placehold.it/100x100" %>
 		</td>
 		<td>
 			<h3><%= @current_group.name %></h3>
@@ -11,8 +11,9 @@
 		</td>
 	</tr>
 </table>
+<br />
 <ul class="nav nav-pills">
-	<li><%= link_to raw("<i class='icon-edit'></i> #{t("Write Post")}"), new_group_post_path(@current_group), :remote => true, :data => {:type=>"script"} %></li>
+	<li><%= link_to raw("<i class='icon-edit'></i> #{t("Write Topic")}"), new_group_topic_path(@current_group) %></li>
 	<li><%= link_to raw("<i class='icon-camera'></i> #{t("Add Photo")}"), new_group_event_path(@current_group) %></li>
 	
 	<li><%= link_to raw("<i class='icon-question-sign'></i> #{t("Ask Question")}"), new_group_question_path(@current_group) %></li>
