--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,3 @@
 <div id="posts" class='clearfix'>
-	<%= render @activities %>
+	<%= render :partial => 'posts/post', :collection => @posts %>
 </div>
