add jquery file upload

--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -23,7 +23,7 @@
 					<%= render "groups/nav"%>		
 				</div>
 				<div class='span8'>	
-					<%= render 'menu'%>
+					<%= render 'groups/menu'%>
 					<%= yield %>
 				</div>
 				<div class='span2'>	
