--- a/app/views/groups/_menu.html.erb
+++ b/app/views/groups/_menu.html.erb
@@ -2,8 +2,8 @@
 	<%= tabs_tag(:namespace => :group_menus, :open_tabs => {:id => "group_menus", :class => "nav nav-tabs" }, :builder => MenuTabBuilder) do |tab| %>
 	  <%= tab.index t('Activity'),group_path(@current_group) %>
 	  <%= tab.document t('Document'), group_documents_path(@current_group) %>	
-	  <%= tab.document t('Pages'), group_pages_path(@current_group) %>	
-	  <%= tab.document t('Categories'), group_categories_path(@current_group) %>	
-	  <%= tab.document t('Settings'), group_documents_path(@current_group) %>	
+	  <%= tab.page t('Pages'), group_pages_path(@current_group) %>	
+	  <%= tab.category t('Categories'), group_categories_path(@current_group) %>	
+	  <%= tab.setting t('Settings'), group_documents_path(@current_group) %>	
 	<% end %>
 </div>
