--- a/app/views/group/topics/_form.html.erb
+++ b/app/views/group/topics/_form.html.erb
@@ -6,6 +6,7 @@ $(document).ready(function() {
 <div class="post_form">
 	<%= simple_form_for [@current_group, @topic], :html => {:id => "post_form", :class => 'form-horizontal'} do |f| -%>	
 	<%= render 'shared/error_messages', :object => f.object %>
+	<%= f.input :title, :label => "title" %>
 	<%= f.input :body, :label => "Body", :input_html => { :width => 120, :height => 30, :id => "input_post" } %>
 	<div class="actions">
 		<%= f.submit "发布", :class=>'btn btn-primary'%>
