--- a/app/views/groups/_profile.html.erb
+++ b/app/views/groups/_profile.html.erb
@@ -1,7 +1,7 @@
 <table>
 	<tr>
 		<td>
-			<%= image_tag current_user.avatar_url(:m) || "http://placehold.it/100x100" %>
+			<%= image_tag @current_group.logo_url(:m) || "http://placehold.it/100x100" %>
 		</td>
 	</tr>
 	<tr>
