--- a/app/views/group/documents/new.html.erb
+++ b/app/views/group/documents/new.html.erb
@@ -1,4 +1,4 @@
 <h1><%= t("Upload Document") %></h1>
 <%= render "form" %>
 
-<%= link_to '返回', documents_path %>
+<%= link_to '返回', group_documents_path(@current_group) %>
