--- a/app/assets/stylesheets/override.css
+++ b/app/assets/stylesheets/override.css
@@ -20,11 +20,9 @@ body {
 .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
     width: 960px;
 }
-.container .span-left{
-    width: 675px
-}
-.container .span-right{
-    width: 245px
+.nav-tabs > li > a, .nav-pills > li > a {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
