--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,15 @@
 <%- if current_user %>
-<%= tabs_tag(:namespace => :site_menus, :open_tabs => {:id => "user_menus", :class => "nav" }, :builder => MenuTabBuilder) do |tab| %>
-  <%= tab.home t('Groups'), groups_path %>
-  <%= tab.contact t('Contacts'), contacts_path %>
-  <%= tab.me t('Me'), profile_path(current_user.login) %>
-<% end %>
+	<%= tabs_tag(:namespace => :site_menus, :open_tabs => {:id => "site_nav", :class => "nav" }, :builder => MenuTabBuilder) do |tab| %>
+	  <%= tab.home '首页', groups_path %>
+		<% Grade.list.each do |grade| %>
+		<li class="dropdown">
+		  <a data-toggle="dropdown" class="dropdown-toggle" href="#"><%= grade.name %> <b class="caret"></b></a>
+			<%= tabs_tag(:namespace => :grades_nav, :open_tabs => {:id => "grades_nav", :class => "dropdown-menu" }, :builder => MenuTabBuilder) do |tab| %>
+				<% grade.children.each do |child| %>
+					<%= tab.try "grade_#{child.id}", child.name, child %>
+					<li class="divider"></li>
+				<% end %>
+			<% end %>
+		<% end %>
+	<% end %>
 <% end %>
