--- a/app/views/layouts/group.html.erb
+++ b/app/views/layouts/group.html.erb
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title><%= content_for?(:title) ? yield(:title) : "微联 - 为您提供优质的社交群组服务" %></title>
+	<title><%= content_for?(:title) ? yield(:title) : "好班级 - 为您提供优质的学习平台" %></title>
 	<%= csrf_meta_tags %>
 	<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
 	<!--[if lt IE 9]>
