--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for @group, :html => {:class => 'form-stacked, new-share'} do |f| -%>	
-	<%= f.error_notification %>
+        <%= f.error_notification %>
 	<%= f.input :name, :class=>'xlarge', :label => t('name') %>
 	<%= f.input :logo, :label => t('logo') %>
 	<%# f.input :kind_id, :label => t('kind'), :collection => Group.Kinds, :include_blank => false, :required => true %>
 	<%= f.input :description, :label => t('description') %>
 	<div class="actions">
-		<%= f.submit t('Create'), :class=>'btn btn-primary' %>
+	  <%= f.submit '创建', :class=>'btn btn-primary' %>
 	</div>
 <% end %>
